tests/rosetta/out/Zig/checkpoint-synchronization-3.error
zig build error: exit status 1
/tmp/TestMochiZigGoldencheckpoint-synchronization-339684284/001/prog.zig:25:33: error: use of undeclared identifier 'substring'
